# compagnon-immo

./: .gitignore  Makefile  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
dags/: compagnon_immo_pipeline.py
deployments/nginx/: generate-certs.bat
dockerfiles/: Dockerfile.api
k8s/: api-deployment.yaml  api-service.yaml  hpa.yaml
metrics/: scores.json
mlops/: track_experiment.py
monitoring/: drift_report.py  prometheus.yml
monitoring/grafana/provisioning/dashboards/: compagnon_immo_dashboard.json  dashboards.yml
monitoring/reports/: data_drift_2022_vs_2025.html
notebooks/Models/: model_xgboost_single.pkl.dvc
src/api/: main.py  schemas.py
src/pipeline/: predict.py  train_model.py
src/services/inference/: inference_service.py
tests/: conftest.py  test_api.py  test_features.py
