[project]
name = "compagnon-immo-mlops"
version = "0.1.0"
description = "Projet MLOps pour l'estimation immobiliere Compagnon Immobilier."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "streamlit>=1.35",
    "plotly>=5.20",
    "prometheus-client>=0.20",
    "pydantic>=2.7",
    "mlflow>=2.14",
    "dvc>=3.50",
    "evidently>=0.4.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

